--- a/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/Invite friends View Controller/InviteFriendViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/Invite friends View Controller/InviteFriendViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -26,9 +26,12 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Svp-Vp-0ss"/>
                     </constraints>
-                    <state key="normal" title="Invite via Email">
+                    <state key="normal" title="Share link">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="shareLink:" destination="-1" eventType="touchUpInside" id="Gxz-K0-nkI"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwb-8V-E4t" userLabel="Invite Via Sms Button">
                     <rect key="frame" x="20" y="504" width="374" height="50"/>
@@ -38,6 +41,9 @@
                     <state key="normal" title="Invite via SMS">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="sendMessage:" destination="-1" eventType="touchUpInside" id="ygm-fx-jGp"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VLT-UH-uFk" userLabel="Copy Link Button">
                     <rect key="frame" x="20" y="568" width="374" height="50"/>
@@ -47,6 +53,10 @@
                     <state key="normal" title="Copy my invite link">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="copyLink" destination="-1" eventType="touchUpInside" id="U8q-J3-Oh2"/>
+                        <action selector="copyText" destination="-1" eventType="touchUpInside" id="3Nl-Dk-7zP"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tr-Wy-nFC">
                     <rect key="frame" x="20" y="354.33333333333331" width="374" height="45.666666666666686"/>
@@ -93,6 +103,10 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vk9-xj-ANc">
                     <rect key="frame" x="20" y="15" width="25" height="25"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="25" id="BEA-dO-5GO"/>
+                        <constraint firstAttribute="width" constant="25" id="j3x-Wl-9Gl"/>
+                    </constraints>
                     <state key="normal" image="close_white"/>
                     <connections>
                         <action selector="close" destination="-1" eventType="touchUpInside" id="3Yt-p2-xAo"/>
@@ -110,7 +124,6 @@
                 <constraint firstItem="Vk9-xj-ANc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="15" id="93r-tz-Xk1"/>
                 <constraint firstItem="VLT-UH-uFk" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="C0E-Mu-DB4"/>
                 <constraint firstItem="Vk9-xj-ANc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Eau-s3-d6r"/>
-                <constraint firstItem="Vk9-xj-ANc" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.0339674" id="HQI-vE-OzC"/>
                 <constraint firstItem="F44-Tz-dOl" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.1" id="N8J-mj-9YG"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="VLT-UH-uFk" secondAttribute="trailing" constant="20" id="SxU-bm-adT"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="VLT-UH-uFk" secondAttribute="bottom" constant="118" id="Sxj-Ta-NAb"/>
@@ -126,7 +139,6 @@
                 <constraint firstItem="gwb-8V-E4t" firstAttribute="top" secondItem="ISK-K3-rRp" secondAttribute="bottom" constant="14" id="y1t-x5-LC8"/>
                 <constraint firstItem="ISK-K3-rRp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="zCP-xc-bAc"/>
                 <constraint firstItem="NUY-zK-cXz" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="zQE-jh-IQJ"/>
-                <constraint firstItem="Vk9-xj-ANc" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.0603865" id="ztn-IG-LIu"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="140.57971014492756" y="142.66304347826087"/>
